Clean up code by introducing the StyledString